# CoreX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build.sh  compile_commands.json  run-test.sh  run-tests.sh
.github/workflows/: cmake.yml
include/CoreX/: CoreX.hpp  algorithms.hpp  allocator.hpp  array.hpp  bitset.hpp  concepts.hpp  core.hpp  error.hpp  iterator.hpp  reference.hpp  result.hpp  string.hpp  stub.hpp  type_traits.hpp  unique_ptr.hpp  utility.hpp  variant.hpp  vector.hpp
tests/: algorithms_test.cpp  allocator_test.cpp  array_test.cpp  bitset_test.cpp  concepts_test.cpp  iterator_test.cpp  reference_test.cpp  result_test.cpp  sample_test.cpp  string_test.cpp  test_utility.cpp  test_utility.hpp  type_traits_test.cpp  unique_ptr_test.cpp  utility_test.cpp  variant_test.cpp  vector_test.cpp
